--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,7 @@ header {
   padding: 1.5rem;
 }
 
-nav {
+.headers {
   width: 100%;
   background-color: rgba(76, 76, 76, 0.36);
   color: black;
@@ -19,16 +19,199 @@ nav {
   backdrop-filter: blur(4px);
 }
 
+.bars {
+  display: none;
+  position: absolute;
+  width: 27px;
+  height: 27px;
+  top: 45px;
+  right: 50px;
+  cursor: pointer;
+  z-index: 500;
+  padding-top: 9px;
+}
+
+.bar {
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  position: absolute;
+  z-index: 200;
+}
+span::before,
+span::after {
+  content: "";
+  display: block;
+  background-color: #fff;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+}
+
+.bar::before {
+  transform: translateY(-9px);
+}
+
+.bar::after {
+  transform: translateY(9px);
+}
+
+.bars.active .bar {
+  background-color: transparent;
+}
+
+.bars.active span::before {
+  animation: top-bar 1s;
+  animation-fill-mode: forwards;
+}
+
+.bars.active span::after {
+  animation: bottom-bar 1s;
+  animation-fill-mode: forwards;
+}
+
+#nav {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: all 1s;
+  z-index: -1;
+  overflow: hidden;
+  opacity: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+#nav a {
+  color: #fff;
+  text-decoration: none;
+  line-height: 70vw;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-indent: 50vw;
+  border-radius: 50%;
+  transition: all 0.5s;
+}
+
+#nav a:hover {
+  background: #357ffd;
+}
+
+ul {
+  list-style: none;
+}
+
+.visible {
+  z-index: 100 !important;
+  opacity: 1 !important;
+}
+
+.shape-circle {
+  border-radius: 50%;
+  width: 20vw;
+  height: 20vw;
+  top: -10vw;
+  right: -10vw;
+  position: absolute;
+  transition: all 1s ease-in-out;
+  background: #2979ff;
+  box-shadow: 0 0px 0px rgba(4, 26, 62, 0.5);
+}
+
+#nav.visible li:first-child {
+  width: 200vw;
+  height: 200vw;
+  top: -100vw;
+  right: -100vw;
+  z-index: 5;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
+}
+
+#nav.visible li:nth-child(2) {
+  width: 150vw;
+  height: 150vw;
+  top: -75vw;
+  right: -75vw;
+  z-index: 6;
+  transition: all 0.6s ease-in-out;
+  box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
+}
+
+#nav.visible li:nth-child(3) {
+  width: 100vw;
+  height: 100vw;
+  top: -50vw;
+  right: -50vw;
+  z-index: 7;
+  transition: all 0.7s ease-in-out;
+  box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
+}
+
+#nav.visible li:last-child {
+  width: 50vw;
+  height: 50vw;
+  top: -25vw;
+  right: -25vw;
+  z-index: 8;
+  transition: all 0.8s ease-in-out;
+  box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
+}
+
+#nav.visible li:first-child a {
+  line-height: 265vw !important;
+  text-indent: 15vw !important;
+}
+
+#nav.visible li:nth-child(2) a {
+  line-height: 200vw !important;
+  text-indent: 17vw !important;
+}
+
+#nav.visible li:nth-child(3) a {
+  line-height: 137vw !important;
+  text-indent: 17vw !important;
+}
+
+#nav.visible li:last-child a {
+  line-height: 70vw !important;
+  text-indent: 12vw !important;
+}
+
+@keyframes top-bar {
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: rotate(45deg) translateY(0);
+  }
+}
+
+@keyframes bottom-bar {
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: rotate(-45deg) translateY(0);
+  }
+}
+
 nav .sae-icons {
   display: flex;
   gap: 10px;
   justify-content: left;
   align-items: center;
-  width: 20%;
+  width: 26%;
+  margin-left: 10px;
 }
 nav .sae-icons .sae-logo {
-  width: 14%;
-  height: 14%;
+  width: 3rem;
+  height: 3rem;
 }
 
 nav .sae-icons .title {
@@ -39,7 +222,7 @@ nav .sae-icons .title {
   }
 }
 
-nav ul {
+.headers ul {
   list-style: none;
   display: flex;
   justify-content: flex-end;
@@ -63,4 +246,26 @@ nav ul {
 a {
   text-decoration: none;
   color: var(--text);
+}
+
+@media (max-width: 1000px) {
+  nav .sae-icons .sae-logo {
+    width: 2.75rem;
+    height: 2.75rem;
+  }
+}
+@media (max-width: 800px) {
+  .headers {
+    justify-content: left;
+  }
+  .bars {
+    display: block;
+  }
+
+  .headers .sae-icons {
+    width: 80%;
+  }
+  .headers ul {
+    display: none;
+  }
 }
