--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -55,3 +55,63 @@ footer {
   font-size: 35px;
   cursor: pointer;
 }
+
+hr {
+  width: 90%;
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  margin: 10px auto;
+}
+
+.copyright {
+  text-align: center;
+}
+
+.underline {
+  width: 100%;
+  height: 5px;
+  background: #767676;
+  border-radius: 3px;
+  position: absolute;
+  top: 35px;
+  left: 0;
+  overflow: hidden;
+}
+
+.underline span {
+  width: 15px;
+  height: 100%;
+  background: #fff;
+  border-radius: 3px;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  animation: moving 2s linear infinite;
+}
+
+@keyframes moving {
+  0% {
+    left: -20px;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+@media (max-width: 840px) {
+  footer {
+    bottom: unset;
+  }
+  .col {
+    flex-basis: 42%;
+  }
+}
+
+@media (max-width: 536px) {
+  .row {
+    justify-content: center;
+  }
+  .col {
+    flex-basis: 80%;
+  }
+}
