--- a/src/screens/homescreen/homescreen.css
+++ b/src/screens/homescreen/homescreen.css
@@ -18,3 +18,13 @@
     transform: translate(-50%, -50%);
   }
 }
+
+.text::before,
+.text::after {
+  content: "";
+  display: block;
+  background-color: #fff;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+}
