container-3 almost completed

--- a/src/screens/homescreen/homescreen.css
+++ b/src/screens/homescreen/homescreen.css
@@ -291,3 +291,57 @@
 #next-btn {
   right: 157px;
 }
+
+.container {
+  padding: 20px;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.triangle {
+  position: relative;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.left {
+  left: 20px;
+  width: 45vw;
+  height: 77vh;
+  background-color: #007bff;
+  clip-path: polygon(0 0, 100% 100%, 0 100%);
+  img {
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(0 0, 100% 100%, 0 125%);
+  }
+}
+
+.center {
+  left: 50%;
+  transform: translateX(-97%);
+  width: 93vw;
+  height: 77vh;
+  background-color: #007bff;
+  clip-path: polygon(50% 100%, 99% 0%, -664% -1331%);
+  img {
+    width: 100%;
+  }
+}
+
+.right {
+  right: 40px;
+  transform: translateX(-191%);
+  height: 77vh;
+  width: 45vw;
+  background-color: #007bff;
+  clip-path: polygon(100% 0, 100% 100%, 0 100%);
+  img {
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%);
+  }
+}
