--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,9 +1,10 @@
-header {
+.header {
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 300;
   padding: 1.5rem;
+  /* overflow: hidden; */
 }
 
 .headers {
@@ -70,21 +71,22 @@ header {
   animation-fill-mode: forwards;
 }
 
-#nav {
+.nav {
+  display: block;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  transition: all 1s;
-  z-index: -1;
+  transition: all 2s;
+  z-index: 1;
   overflow: hidden;
-  opacity: 0;
+  opacity: 1;
   width: 100vw;
   height: 100vh;
 }
 
-#nav a {
+.nav a {
   color: #fff;
   text-decoration: none;
   line-height: 70vw;
@@ -98,7 +100,7 @@ header {
   transition: all 0.5s;
 }
 
-#nav a:hover {
+.nav a:hover {
   background: #357ffd;
 }
 
@@ -106,9 +108,9 @@ ul {
   list-style: none;
 }
 
-.visible {
-  z-index: 100 !important;
-  opacity: 1 !important;
+.hide {
+  transition: all 0.5s;
+  display: none;
 }
 
 .shape-circle {
@@ -123,7 +125,7 @@ ul {
   box-shadow: 0 0px 0px rgba(4, 26, 62, 0.5);
 }
 
-#nav.visible li:first-child {
+.nav li:first-child {
   width: 200vw;
   height: 200vw;
   top: -100vw;
@@ -133,7 +135,7 @@ ul {
   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
 }
 
-#nav.visible li:nth-child(2) {
+.nav li:nth-child(2) {
   width: 150vw;
   height: 150vw;
   top: -75vw;
@@ -143,7 +145,7 @@ ul {
   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
 }
 
-#nav.visible li:nth-child(3) {
+.nav li:nth-child(3) {
   width: 100vw;
   height: 100vw;
   top: -50vw;
@@ -153,7 +155,7 @@ ul {
   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
 }
 
-#nav.visible li:last-child {
+.nav li:last-child {
   width: 50vw;
   height: 50vw;
   top: -25vw;
@@ -163,22 +165,22 @@ ul {
   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
 }
 
-#nav.visible li:first-child a {
+.nav li:first-child a {
   line-height: 265vw !important;
   text-indent: 15vw !important;
 }
 
-#nav.visible li:nth-child(2) a {
+.nav li:nth-child(2) a {
   line-height: 200vw !important;
   text-indent: 17vw !important;
 }
 
-#nav.visible li:nth-child(3) a {
+.nav li:nth-child(3) a {
   line-height: 137vw !important;
   text-indent: 17vw !important;
 }
 
-#nav.visible li:last-child a {
+.nav li:last-child a {
   line-height: 70vw !important;
   text-indent: 12vw !important;
 }
