--- a/src/screens/homescreen/homescreen.css
+++ b/src/screens/homescreen/homescreen.css
@@ -3,6 +3,7 @@
   top: -116px;
   text-align: center;
   width: 100%;
+  height: 400px;
   img {
     width: 100%;
     height: 100%;
@@ -28,20 +29,38 @@
   height: 4px;
   position: absolute;
 }
-@media (max-width: 500px) {
-  h1 {
-    font-size: 24px;
-  }
 
-  .text::before,
-  .text::after {
-    width: 88%;
+@media (max-width: 1025px) {
+  .top-container {
+    height: 350px;
   }
 }
 
+@media (max-width: 700px) {
+  .top-container {
+    height: 320px;
+  }
+  h1 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 600px) {
+  .top-container {
+    height: 280px;
+  }
+  h1 {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 500px) {
+  .text::before,
+.text::after{
+  width: 80%;
+}
+}
+
 .Container-2 {
-  position: relative;
-  top: -10%;
   display: flex;
   justify-content: center;
 }
@@ -149,37 +168,74 @@
     color: #fff;
     text-align: center;
     margin: 0 auto 5px auto;
-    font-family: "Montserrat", sans-serif;
   }
   p {
     line-height: 1.5;
-    font-family: "Poppins", sans-serif;
   }
 }
 
 .past-participation {
   position: relative;
+  margin-top: 40px;
   h1 {
     color: white;
-    font-family: "Montserrat", sans-serif;
     text-align: center;
+    margin-bottom: 0;
   }
 }
 
 .past-participation .container {
-  position: relative;
-  /* display: flex;
-  justify-content: center; */
-  width: 1160px;
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  transform-style: preserve-3d;
-  perspective: 500px;
-  margin: auto;
-  z-index: 10;
-  overflow-x: auto;
-  scrollbar-width: none;
+  display: flex;
+  justify-content: center;
 }
+
+.past-participation .container .myswiper {
+  width: 80%;
+  position: unset;
+}
+
+.swiper-android .swiper-slide,
+.swiper-ios .swiper-slide,
+.swiper-wrapper {
+  transform: translate3d(0px, 0, 0);
+}
+
+.swiper-button-prev {
+  top: 60% !important;
+  left: 50px !important;
+}
+.swiper-button-next {
+  top: 60% !important;
+  right: 50px !important;
+}
+/* @media (max-width: 1210px) {
+  .past-participation .container {
+    width: 900px;
+  }
+} */
+
+/* @media (max-width: 940px) {
+  .past-participation .container {
+    width: 585px;
+  }
+} */
+@media (max-width: 1350px) {
+  .past-participation .container .myswiper {
+    width: 75%;
+  }
+}
+@media (max-width: 1000px) {
+  .past-participation .container .myswiper {
+    width: 70%;
+  }
+}
+
+@media (max-width: 740px) {
+  .past-participation .container .myswiper {
+    width: 48%;
+  }
+}
+
 .past-participation .container::-webkit-scrollbar-button {
   display: none;
 }
@@ -192,7 +248,7 @@
   transform-style: preserve-3d;
   overflow: hidden;
   margin-right: 15px;
-  margin-top: 45px;
+  margin-top: 20px;
 }
 .past-participation .container:hover .box {
   transform: rotateY(25deg);
@@ -244,7 +300,7 @@
   height: 100%;
   z-index: 1;
   display: flex;
-  padding: 20px;
+  padding: 30px;
   align-items: flex-end;
   box-sizing: border-box;
 }
@@ -260,55 +316,62 @@
 .past-participation .container .box:hover .content h2 {
   transform: translateY(0px);
 }
-.past-participation .container .box .content p {
+.past-participation .container .box .content ul {
+  margin: 0 -40px;
+  list-style: none;
   color: #fff;
   transition: 0.5s;
   font-size: 14px;
   transform: translateY(200px);
   transition-delay: 0.4s;
 }
-.past-participation .container .box:hover .content p {
+.past-participation .container .box .content ul li {
+  display: inline;
+  margin-right: 15px;
+}
+.past-participation .container .box:hover .content ul {
   transform: translateY(0px);
 }
 
-.slide-button {
-  position: absolute;
-  top: 50%;
-  height: 30px;
-  width: 30px;
-  color: #fff;
-  border: none;
-  outline: none;
-  background: #000;
-  font-size: 1.2rem;
-  cursor: pointer;
-  border-radius: 50%;
-  transform: translateY(50%);
+.container-3 {
+  margin-top: 60px;
+  z-index: 2;
 }
-#prev-btn {
-  left: 145px;
-}
-#next-btn {
-  right: 157px;
-}
-
 .container {
-  padding: 20px;
-  position: relative;
   display: grid;
+  position: relative;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
+  .titles {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    width: 100%;
+    transform: translateX(-5%);
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    /* gap: 40%; */
+    h1::before,
+    h1::after {
+      content: "";
+      display: block;
+      background-color: #fff;
+      height: 3px;
+    }
+  }
 }
 
 .triangle {
   position: relative;
   width: 0;
   height: 0;
+  z-index: 10;
   border-style: solid;
 }
 
 .left {
-  left: 20px;
+  position: relative;
   width: 45vw;
   height: 77vh;
   background-color: #007bff;
@@ -321,27 +384,73 @@
 }
 
 .center {
+  position: relative;
   left: 50%;
-  transform: translateX(-97%);
-  width: 93vw;
+  transform: translateX(-97.5%);
+  width: 97vw;
   height: 77vh;
   background-color: #007bff;
-  clip-path: polygon(50% 100%, 99% 0%, -664% -1331%);
+  clip-path: polygon(50% 100%, 100% 0%, -620% -1325%);
   img {
     width: 100%;
   }
 }
 
 .right {
-  right: 40px;
-  transform: translateX(-191%);
+  transform: translateX(-193%);
   height: 77vh;
-  width: 45vw;
+  width: 48vw;
   background-color: #007bff;
   clip-path: polygon(100% 0, 100% 100%, 0 100%);
   img {
     width: 100%;
     height: 100%;
     clip-path: polygon(100% 0, 100% 100%, 0 100%);
+  }
+}
+
+.profile-container {
+  margin-top: 90px;
+  h1 {
+    color: #fff;
+    text-align: center;
+  }
+}
+
+.profile-container .row-p {
+  width: 100%;
+  z-index: 1;
+  position: relative;
+}
+.profile-container .row-p .inner-container {
+  margin: auto;
+  display: flex;
+  width: 85%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.profile-container .row-p .col-p {
+  flex-basis: 23%;
+  padding: 10px;
+}
+
+@media (max-width: 1176px) {
+  .profile-container .row-p .col-p {
+    flex-basis: 28%;
+  }
+}
+
+@media (max-width: 860px) {
+  .profile-container .row-p .col-p {
+    flex-basis: 39%;
+  }
+}
+
+@media (max-width: 590px) {
+  .profile-container .row-p .col-p {
+    flex-basis: 52%;
+    margin: auto;
+    height: 400px;
   }
 }
