--- a/src/screens/autokritipage/autokriti.css
+++ b/src/screens/autokritipage/autokriti.css
@@ -27,23 +27,75 @@
   height: 100vh;
 }
 
+@media (max-width: 900px) {
+  .carousel {
+    height: 80vh;
+  }
+}
+
+@media (max-width: 720px) {
+  .carousel {
+    height: 70vh;
+  }
+}
+
+@media (max-width: 630px) {
+  .top-container-4 {
+    height: 300px;
+  }
+  .carousel {
+    height: 50vh;
+  }
+}
+
+@media (max-width: 450px) {
+  .carousel {
+    height: 40vh;
+  }
+}
+
+@media (max-width: 360px) {
+  .carousel {
+    height: 30vh;
+  }
+}
+
 .carousel .control-next.control-arrow {
   right: -47%;
+  opacity: 1.2;
+  color: black;
 }
 
 .autokriti {
   color: white;
   width: 90%;
-  margin: auto;
-  button {
-    color: white;
-    background-color: red;
-    width: 200px;
-    height: 30px;
+  margin: 20px auto;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 20px;
+  .title {
+    margin: 0;
   }
+}
+.autokriti button {
+  color: white;
+  background-color: red;
+  width: 200px;
+  border: none;
+  border-radius: 5px;
+  font-size: 17px;
+  cursor: pointer;
+  padding: 10px 0;
+  margin-top: 20px;
+}
+
+.autokriti button:hover {
+  background-color: rgb(245, 67, 67);
 }
 .posters-container {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
@@ -95,6 +147,14 @@ figure.snip1206 figcaption {
   transform: translateY(-50%);
   z-index: 1;
 }
+
+figure.snip1206 h1 {
+  font-size: 19px;
+}
+figure.snip1206 h2 {
+  font-size: 16.5px;
+}
+figure.snip1206 h1,
 figure.snip1206 h2,
 figure.snip1206 p {
   margin: 0;
@@ -126,6 +186,8 @@ figure.snip1206.hover:after {
   transform: skew(-45deg) scaleX(1);
   transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
+
+figure.snip1206:hover figcaption h1,
 figure.snip1206:hover figcaption h2,
 figure.snip1206.hover figcaption h2,
 figure.snip1206:hover figcaption p,
@@ -135,11 +197,201 @@ figure.snip1206.hover figcaption p {
   -webkit-transition-delay: 0.2s;
   transition-delay: 0.2s;
 }
+
+figure.snip1206:hover figcaption h1,
+figure.snip1206.hover figcaption h1 {
+  opacity: 1;
+}
+
 figure.snip1206:hover figcaption h2,
 figure.snip1206.hover figcaption h2 {
   opacity: 1;
 }
+
 figure.snip1206:hover figcaption p,
 figure.snip1206.hover figcaption p {
   opacity: 0.7;
+}
+
+.ambassador {
+  color: white;
+  border: 1px solid white;
+  margin: 20px auto;
+  width: 50%;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  h1 {
+    margin: 0;
+    text-align: center;
+  }
+}
+
+.ambassador .benefits,
+.ambassador .roles {
+  color: white;
+  background-color: rgb(0, 98, 255);
+  padding: 10px;
+  font-size: 16px;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  text-transform: uppercase;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+}
+
+.form-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 850px) {
+  .ambassador {
+    width: 60%;
+  }
+  .ambassador .form-container form {
+    width: 60%;
+    select {
+      width: 254px;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .ambassador {
+    width: 70%;
+  }
+  .ambassador .form-container form {
+    width: 60%;
+    select {
+      width: 254px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .ambassador {
+    width: 90%;
+  }
+  .ambassador .form-container form {
+    width: 50%;
+    select {
+      width: 100%;
+    }
+    span {
+      width: 100%;
+    }
+  }
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+.ambassador .benefits-container {
+  width: 60%;
+  font-size: 13px;
+  margin: 10px auto;
+}
+.benefit-1 {
+  text-align: left;
+  h1 {
+    border: 1px solid;
+    border-radius: 10px;
+    margin: 10px 0;
+    transition: 0.6s ease-in;
+  }
+}
+.ambassador .benefits {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 3%;
+
+  .benefits:active {
+    .ambassador .benefits-container .benefit-1 {
+      display: block;
+    }
+  }
+}
+.benefitcarousel {
+  height: 500px;
+}
+.ambassador .roles {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 3%;
+}
+.form-container form {
+  padding: 20px;
+  border: 1px solid;
+  border-radius: 10px;
+  /* display: none; */
+  .input {
+    width: 100%;
+    height: 25px;
+    background-color: transparent;
+    border: 0;
+    color: white;
+    border-bottom: 1px solid white;
+    resize: none;
+  }
+  label {
+    display: block;
+    width: 280px;
+  }
+  span {
+    display: block;
+    width: 280px;
+  }
+  select {
+    width: 300px;
+  }
+
+  .next-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+  }
+  input[type="submit"] {
+    width: 100px;
+    height: 30px;
+    background-color: rgb(245, 104, 33);
+    border-radius: 10px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  input:focus {
+    outline: none;
+  }
+
+  input:active{
+    background-color: transparent;
+  }
+}
+
+.join-now {
+  width: 200px;
+  height: 30px;
+  color: white;
+  background-color: rgb(255, 166, 0);
+  border: none;
+  border-radius: 10px;
+  font-weight: 600;
+  font-size: 16px;
+  margin: auto;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.join-now:hover {
+  background-color: rgb(255, 199, 96);
 }
