--- a/src/components/triangularcontainer/triangularcontainer.css
+++ b/src/components/triangularcontainer/triangularcontainer.css
@@ -1,7 +1,7 @@
 .container-3 {
   margin-top: 60px;
   z-index: 2;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 .inside-container {
   display: flex;
